<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/month_chart_bg"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/main_blue">

        <ImageView
            android:id="@+id/chart_iv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:minWidth="48dp"
            android:onClick="onClick"
            android:src="@mipmap/it_back"
            tools:ignore="SpeakableTextPresentCheck" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/chart_info"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/chart_iv_rili"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:minWidth="48dp"
            android:onClick="onClick"
            android:src="@mipmap/it_rili"
            tools:ignore="SpeakableTextPresentCheck" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/powder_blue"
        android:padding="10dp"
        android:layout_marginTop="20dp">
        <TextView
        android:id="@+id/chart_tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2021年3月账单"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"/>
        <TextView
            android:id="@+id/chart_tv_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="共1笔支出, ￥23.0"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/chart_tv_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="共2笔收入, ￥113.0"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:gravity="center">

        <Button
            android:id="@+id/chart_btn_out"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/main_recordbtn_bg"
            android:onClick="onClick"
            android:text="@string/out"
            android:textColor="@color/white"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/chart_btn_in"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/dialog_btn_bg"
            android:onClick="onClick"
            android:text="@string/in"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/chart_vp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_blue"
        tools:ignore="SpeakableTextPresentCheck" />
</LinearLayout>